fix: css refactor to support sass features in shift72-template

--- a/site/styles/main.scss
+++ b/site/styles/main.scss
@@ -5,7 +5,7 @@
 @import '_bootstrap4';
 @import '_mixins';
 @import '_shift72';
-@import '../../node_modules/font-awesome/scss/font-awesome';
+@import 'font-awesome/scss/font-awesome';
 
 @import '_icons';
 @import '_buttons';
@@ -43,342 +43,9 @@
 
 @import '_can-be-watched-button';
 
-html {
-  height: 100%;
-}
+@import '_legacy';
 
-body {
-  display: flex;
-  flex-direction: column;
-  font-family: $font-family-base;
-  height: 100%;
-}
+// @import local must be last in this file.
+@import 'local/local';
 
-.container-fluid {
-  margin: 0 auto;
-  padding: 0;
-}
-
-.animate-this {
-  transition: all 0.25s ease-out;
-}
-
-.sign-up-now {
-  s72-user-anon {
-    @extend .d-flex;
-    justify-content: center;
-    padding: $grid-gutter-width / 2 0;
-  }
-
-  .supports {
-    @extend .d-flex;
-    justify-content: center;
-
-    img {
-      max-width: 258px;
-    }
-  }
-}
-
-/* stylelint-disable selector-max-compound-selectors, max-nesting-depth */
-.page-collection-list {
-  .page-collection-items {
-    .page-collection-list-item-portrait {
-      &.page-collection-item-6 {
-        flex-basis: (100% / 3);
-        max-width: (100% / 3);
-        @include media-breakpoint-up(sm) {
-          flex-basis: (100% / 4);
-          max-width: (100% / 4);
-        }
-        @include media-breakpoint-up(lg) {
-          flex-basis: (100% / 5);
-          max-width: (100% / 5);
-        }
-        @include media-breakpoint-up(xl) {
-          max-width: (100% / 6);
-        }
-        @include media-breakpoint-up(xxxl) {
-          max-width: (100% / 8);
-        }
-
-        .meta-item-link {
-          width: 100%;
-        }
-      }
-
-      &.page-collection-item-4 {
-        flex-basis: 50%;
-        max-width: 50%;
-        @include media-breakpoint-up(sm) {
-          flex-basis: (100% / 3);
-          max-width: (100% / 3);
-        }
-        @include media-breakpoint-up(lg) {
-          flex-basis: (100% / 4);
-          max-width: (100% / 4);
-        }
-        @include media-breakpoint-up(xl) {
-          max-width: (100% / 5);
-        }
-        @include media-breakpoint-up(xxxl) {
-          max-width: (100% / 6);
-        }
-
-        .meta-item-link {
-          width: 100%;
-        }
-      }
-    }
-
-    .page-collection-list-item-landscape {
-      &.page-collection-item-4 {
-        flex-basis: 50%;
-        max-width: 50%;
-        @include media-breakpoint-up(sm) {
-          flex-basis: (100% / 3);
-          max-width: (100% / 3);
-        }
-        @include media-breakpoint-up(lg) {
-          flex-basis: (100% / 3);
-          max-width: (100% / 3);
-        }
-        @include media-breakpoint-up(xl) {
-          max-width: (100% / 4);
-        }
-        @include media-breakpoint-up(xxxl) {
-          max-width: (100% / 5);
-        }
-
-        .meta-item-link {
-          width: 100%;
-        }
-      }
-
-      &.page-collection-item-3 {
-        flex-basis: 50%;
-        max-width: 50%;
-        @include media-breakpoint-up(lg) {
-          flex-basis: (100% / 3);
-          max-width: (100% / 3);
-        }
-        @include media-breakpoint-up(xl) {
-          flex-basis: (100% / 3);
-          max-width: (100% / 3);
-        }
-        @include media-breakpoint-up(xxxl) {
-          max-width: (100% / 4);
-        }
-
-        .meta-item-link {
-          width: 100%;
-        }
-      }
-    }
-  }
-}
-/* stylelint-enable selector-max-compound-selectors, max-nesting-depth */
-
-s72-classification-label {
-  display: inline-block;
-}
-
-.s72-classification {
-  @extend .d-flex;
-  display: inline-block;
-  margin-top: 0;
-  padding: 0;
-
-  .s72-classification-intro,
-  .s72-classification-divider {
-    display: none;
-  }
-
-  .s72-classification-description {
-    color: rgba(255, 255, 255, 0.8);
-    display: none;
-    font-size: 14px;
-    font-weight: $font-weight-normal;
-    margin-left: 5px;
-  }
-
-  .s72-classification-label {
-    border: 1px solid rgba($body-color, 0.8);
-    border-radius: 0;
-    color: rgba($body-color, 0.8);
-    font-size: 12px;
-    font-weight: $font-weight-bold;
-    padding: 1px 5px;
-    @include media-breakpoint-up(xxxl) {
-      font-size: 14px;
-    }
-  }
-}
-
-.meta-detail-content .meta-detail-tagline-and-classification {
-  align-items: center;
-  display: flex !important;
-  padding-bottom: 14px;
-  padding-top: 8px;
-}
-
-.meta-detail-content .meta-detail-tagline-and-classification .s72-classification {
-  margin-right: 5px;
-}
-
-.meta-detail-content .meta-detail-tagline-and-classification .meta-item-tagline {
-  align-self: center;
-  color: rgba($body-color, 0.8);
-  font-weight: $font-weight-normal;
-  margin-bottom: 0;
-}
-
-.wishlist-page-landscape .s72-userwishlist-items {
-  @extend .d-flex;
-  flex-wrap: wrap;
-
-  .partial {
-    flex-basis: (100% / 2);
-    max-width: (100% / 2);
-    @include media-breakpoint-up(md) {
-      flex-basis: (100% / 3);
-      max-width: (100% / 3);
-    }
-    @include media-breakpoint-up(lg) {
-      flex-basis: (100% / 3);
-      max-width: (100% / 3);
-    }
-    @include media-breakpoint-up(xl) {
-      flex-basis: (100% / 4);
-      max-width: (100% / 4);
-    }
-    @include media-breakpoint-up(xxxl) {
-      flex-basis: (100% / 4);
-      max-width: (100% / 4);
-    }
-  }
-}
-
-.library-page-landscape .s72-userlibrary-items {
-  @extend .d-flex;
-  flex-wrap: wrap;
-
-  .partial {
-    flex-basis: (100% / 2);
-    max-width: (100% / 2);
-    @include media-breakpoint-up(md) {
-      flex-basis: (100% / 3);
-      max-width: (100% / 3);
-    }
-    @include media-breakpoint-up(lg) {
-      flex-basis: (100% / 3);
-      max-width: (100% / 3);
-    }
-    @include media-breakpoint-up(xl) {
-      flex-basis: (100% / 4);
-      max-width: (100% / 4);
-    }
-    @include media-breakpoint-up(xxxl) {
-      flex-basis: (100% / 4);
-      max-width: (100% / 4);
-    }
-  }
-}
-
-.search-page-landscape .s72-searchresults-results {
-  @extend .d-flex;
-  flex-wrap: wrap;
-
-  .partial {
-    flex-basis: (100% / 2);
-    max-width: (100% / 2);
-    @include media-breakpoint-up(md) {
-      flex-basis: (100% / 3);
-      max-width: (100% / 3);
-    }
-    @include media-breakpoint-up(lg) {
-      flex-basis: (100% / 3);
-      max-width: (100% / 3);
-    }
-    @include media-breakpoint-up(xl) {
-      flex-basis: (100% / 4);
-      max-width: (100% / 4);
-    }
-    @include media-breakpoint-up(xxxl) {
-      flex-basis: (100% / 4);
-      max-width: (100% / 4);
-    }
-  }
-}
-
-.page-bundle-list {
-  @extend .page-collection-list;
-
-  h2,
-  h4 {
-    font-size: 16px;
-    font-weight: $font-weight-bold;
-    width: 100%;
-    @include media-breakpoint-up(md) {
-      font-size: 18px;
-    }
-    @include media-breakpoint-up(lg) {
-      font-size: 20px;
-    }
-  }
-
-  .page-bundle-items {
-    @extend .page-collection-items;
-  }
-
-  .page-bundle-item {
-    @extend .page-collection-item;
-  }
-
-  .page-bundle-list-item-portrait {
-    @extend .page-collection-list-item-portrait;
-  }
-
-  .page-bundle-list-item-landscape {
-    @extend .page-collection-list-item-landscape;
-  }
-
-  .page-bundle-item-4 {
-    @extend .page-collection-item-4;
-  }
-
-  .page-bundle-item-6 {
-    @extend .page-collection-item-6;
-  }
-
-  .poster {
-    width: 100%;
-  }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-.title {
-  word-wrap: break-word;
-}
-
-.no-scroll {
-  overflow-y: hidden;
-  @include media-breakpoint-up(lg) {
-    overflow-y: visible;
-  }
-
-  main,
-  footer {
-    opacity: 0.2;
-    pointer-events: none;
-    @include media-breakpoint-up(lg) {
-      opacity: 1;
-    }
-  }
-}
+// DO NOT PUT ANYTHING IN THIS FILE.
